[gd_scene load_steps=5 format=3 uid="uid://bnu6t36q1kam5"]

[ext_resource type="Script" path="res://Scripts/pipe.gd" id="1_lbi30"]
[ext_resource type="Texture2D" uid="uid://duty0bjm04fem" path="res://Sprites/pipe.png" id="1_rhro1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhkdd"]
size = Vector2(28, 28)

[sub_resource type="Curve2D" id="Curve2D_s6nq7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 9.53674e-07, -14)
}
point_count = 2

[node name="Pipe" type="StaticBody2D"]
z_index = 4
position = Vector2(0, -8)
script = ExtResource("1_lbi30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_bhkdd")

[node name="EnemyEndPoint" type="Marker2D" parent="."]
position = Vector2(0, -15)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 2)
scale = Vector2(1.4, 1.4)

[node name="Path2D" type="Path2D" parent="."]
scale = Vector2(1, 0.9)
curve = SubResource("Curve2D_s6nq7")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotates = false
loop = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rhro1")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
